// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TicketAttachments component private should display an error message if there's private attachments 1`] = `
<div
  className="component"
>
  <div
    className="mb-2"
  >
    <i
      className="material-icons mr-1"
    >
      warning
    </i>
     There is
     
    3
     attachment(s) to this message which we couldn't download.
  </div>
  <Lightbox
    backdropClosesModal={true}
    closeButtonTitle="Close (Esc)"
    currentImage={0}
    enableKeyboardInput={true}
    imageCountSeparator=" of "
    images={
      [
        {
          "caption": "foo",
          "src": "https://uploads.gorgi.us/bar",
        },
        {
          "caption": "bar",
          "src": "https://uploads.gorgi.us/baz",
        },
        {
          "caption": "baz",
          "src": "https://uploads.gorgi.us/foo",
        },
      ]
    }
    isOpen={false}
    leftArrowTitle="Previous (Left arrow key)"
    onClickNext={[Function]}
    onClickPrev={[Function]}
    onClickShowNextImage={true}
    onClickThumbnail={[Function]}
    onClose={[Function]}
    preloadNextImage={true}
    rightArrowTitle="Next (Right arrow key)"
    showCloseButton={true}
    showImageCount={true}
    showThumbnails={true}
    theme={{}}
    thumbnailOffset={2}
    width={1024}
  />
</div>
`;

exports[`TicketAttachments component private should display both an error message and attachments 1`] = `
<div
  className="component"
>
  <div
    className="mb-2"
  >
    <i
      className="material-icons mr-1"
    >
      warning
    </i>
     There is
     
    1
     attachment(s) to this message which we couldn't download.
  </div>
  <div
    className="attachmentContainer"
    key="0"
  >
    <a
      className="item hasPreview"
      href="https://uploads.gorgi.us/bar"
      onClick={[Function]}
      rel="noopener noreferrer"
      style={
        {
          "backgroundImage": "url(https://uploads.gorgi.us/bar?format=120x80)",
        }
      }
      target="_blank"
    >
      <div
        className="itemMeta"
      >
        <div
          className="metaName"
        >
          foo
        </div>
        <div
          className="metaType"
        >
          <i
            className="material-icons md-2"
          >
            photo_library
          </i>
        </div>
      </div>
    </a>
  </div>
  <div
    className="attachmentContainer"
    key="1"
  >
    <a
      className="item hasPreview"
      href="https://uploads.gorgi.us/foo"
      onClick={[Function]}
      rel="noopener noreferrer"
      style={
        {
          "backgroundImage": "url(https://uploads.gorgi.us/foo?format=120x80)",
        }
      }
      target="_blank"
    >
      <div
        className="itemMeta"
      >
        <div
          className="metaName"
        >
          baz
        </div>
        <div
          className="metaType"
        >
          <i
            className="material-icons md-2"
          >
            photo_library
          </i>
        </div>
      </div>
    </a>
  </div>
  <div
    className="attachmentContainer"
    key="2"
  >
    <div
      className="productCard"
    >
      <div
        className="productImageContainer"
      >
        <img
          alt="qux"
          src="http://proxy-url/80x80,s8MK7LSC6RLh94fGgMBYlNoFyfP-9ZuGz67e8Ec8PZpk/http://gorgias.io/bar"
        />
      </div>
      <div
        className="productDetail"
      >
        <p
          className="productName"
        >
          qux
        </p>
        <p
          className="variantName"
        >
          quux
        </p>
        <div
          className="productPrice"
        >
          <MoneyAmount
            amount={2}
            currencyCode="USD"
            negative={false}
            renderIfZero={true}
          />
        </div>
      </div>
      <a
        className="productMeta"
        href="http://gorgias.io/bar"
        rel="noopener noreferrer"
        target="_blank"
      >
        <div
          className="metaName"
        >
          qux
          <br />
          quux
        </div>
        <div
          className="metaType"
        >
          <i
            className="material-icons md-2"
          >
            shopify
          </i>
        </div>
      </a>
    </div>
  </div>
  <Lightbox
    backdropClosesModal={true}
    closeButtonTitle="Close (Esc)"
    currentImage={0}
    enableKeyboardInput={true}
    imageCountSeparator=" of "
    images={
      [
        {
          "caption": "foo",
          "src": "https://uploads.gorgi.us/bar",
        },
        {
          "caption": "bar",
          "src": "https://uploads.gorgi.us/baz",
        },
        {
          "caption": "baz",
          "src": "https://uploads.gorgi.us/foo",
        },
      ]
    }
    isOpen={false}
    leftArrowTitle="Previous (Left arrow key)"
    onClickNext={[Function]}
    onClickPrev={[Function]}
    onClickShowNextImage={true}
    onClickThumbnail={[Function]}
    onClose={[Function]}
    preloadNextImage={true}
    rightArrowTitle="Next (Right arrow key)"
    showCloseButton={true}
    showImageCount={true}
    showThumbnails={true}
    theme={{}}
    thumbnailOffset={2}
    width={1024}
  />
</div>
`;

exports[`TicketAttachments component read-only should match snapshot 1`] = `
<div
  className="component"
>
  <div
    className="attachmentContainer"
    key="0"
  >
    <a
      className="item hasPreview"
      href="https://uploads.gorgi.us/bar"
      onClick={[Function]}
      rel="noopener noreferrer"
      style={
        {
          "backgroundImage": "url(https://uploads.gorgi.us/bar?format=120x80)",
        }
      }
      target="_blank"
    >
      <div
        className="itemMeta"
      >
        <div
          className="metaName"
        >
          foo
        </div>
        <div
          className="metaType"
        >
          <i
            className="material-icons md-2"
          >
            photo_library
          </i>
        </div>
      </div>
    </a>
  </div>
  <div
    className="attachmentContainer"
    key="1"
  >
    <a
      className="item"
      href="foo"
      onClick={[Function]}
      rel="noopener noreferrer"
      target="_blank"
    >
      <div
        className="itemMeta"
      >
        <div
          className="metaName"
        >
          bar
        </div>
        <div
          className="metaType"
        >
          <i
            className="material-icons md-2"
          >
            library_books
          </i>
        </div>
      </div>
    </a>
  </div>
  <div
    className="attachmentContainer"
    key="2"
  >
    <div
      className="productCard"
    >
      <div
        className="productImageContainer"
      >
        <img
          alt="qux"
          src="http://proxy-url/80x80,s8MK7LSC6RLh94fGgMBYlNoFyfP-9ZuGz67e8Ec8PZpk/http://gorgias.io/bar"
        />
      </div>
      <div
        className="productDetail"
      >
        <p
          className="productName"
        >
          qux
        </p>
        <p
          className="variantName"
        >
          quux
        </p>
        <div
          className="productPrice"
        >
          <MoneyAmount
            amount={2}
            currencyCode="USD"
            negative={false}
            renderIfZero={true}
          />
        </div>
      </div>
      <a
        className="productMeta"
        href="http://gorgias.io/bar"
        rel="noopener noreferrer"
        target="_blank"
      >
        <div
          className="metaName"
        >
          qux
          <br />
          quux
        </div>
        <div
          className="metaType"
        >
          <i
            className="material-icons md-2"
          >
            shopify
          </i>
        </div>
      </a>
    </div>
  </div>
  <Lightbox
    backdropClosesModal={true}
    closeButtonTitle="Close (Esc)"
    currentImage={0}
    enableKeyboardInput={true}
    imageCountSeparator=" of "
    images={
      [
        {
          "caption": "foo",
          "src": "https://uploads.gorgi.us/bar",
        },
      ]
    }
    isOpen={false}
    leftArrowTitle="Previous (Left arrow key)"
    onClickNext={[Function]}
    onClickPrev={[Function]}
    onClickShowNextImage={true}
    onClickThumbnail={[Function]}
    onClose={[Function]}
    preloadNextImage={true}
    rightArrowTitle="Next (Right arrow key)"
    showCloseButton={true}
    showImageCount={true}
    showThumbnails={true}
    theme={{}}
    thumbnailOffset={2}
    width={1024}
  />
</div>
`;
